--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <div id="game">
         <h1>Tic Tac Toe</h1>
+        <div id="player-inputs">
+            <input type="text" id="playerX" placeholder="Enter Player X Name">
+            <input type="text" id="playerO" placeholder="Enter Player O Name">
+        </div>
+        <div id="scoreboard">
+            <p id="scoreX">Player X: 0</p>
+            <p id="scoreO">Player O: 0</p>
+        </div>
         <div id="board">
             <!-- Game board will be dynamically generated here -->
         </div>
